--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "@types/node": "^16.11.38",
     "@types/react": "^18.0.10",
     "@types/react-dom": "^18.0.5",
+    "axios": "^0.27.2",
+    "eslint-config-metarhia": "^8.1.0",
     "node-sass": "^7.0.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
     "sass": "^1.23.7",
     "typescript": "^4.7.2",
+    "universal-cookie": "^4.0.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -36,13 +39,6 @@
     "*.{ts,tsx}": "npm run eslint:fix",
     "*.{css,scss}": "npm run stylelint:fix"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest",
-      "typescript"
-    ]
-  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -56,11 +52,11 @@
     ]
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.27.1",
-    "@typescript-eslint/parser": "^5.27.1",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-config-typescript": "^3.0.0",
-    "eslint-plugin-prettier": "^4.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.29.0",
+    "@typescript-eslint/parser": "^5.29.0",
+    "clsx": "^1.1.1",
+    "eslint": "^8.18.0",
+    "eslint-plugin-react": "^7.30.1",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.0",
     "prettier": "^2.6.2",
