--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@types/react": "^18.0.10",
     "@types/react-dom": "^18.0.5",
     "axios": "^0.27.2",
+    "babel-plugin-module-resolver": "^4.1.0",
     "eslint-config-metarhia": "^8.1.0",
+    "eslint-import-resolver-jsconfig": "^1.1.0",
     "node-sass": "^7.0.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
@@ -56,6 +58,8 @@
     "@typescript-eslint/parser": "^5.29.0",
     "clsx": "^1.1.1",
     "eslint": "^8.18.0",
+    "eslint-import-resolver-typescript": "^3.1.1",
+    "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-react": "^7.30.1",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.0",
