--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,11 +15,11 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "baseUrl": "./src",
+    "baseUrl": "src",
     "paths": {
-      "@components/*": ["components/*"],
-      "@constants/*": ["constants/*"],
-      "@styles/*": ["styles/*"]
+      "components/*": ["components/*"],
+      "constants/*": ["constants/*"],
+      "styles/*": ["styles/*"]
     }
   },
   "include": ["src"]
