--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
@@ -14,11 +13,13 @@
     "babel-plugin-module-resolver": "^4.1.0",
     "eslint-config-metarhia": "^8.1.0",
     "eslint-import-resolver-jsconfig": "^1.1.0",
+    "jest": "^28.1.2",
     "node-sass": "^7.0.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
     "sass": "^1.23.7",
+    "ts-jest": "^28.0.5",
     "typescript": "^4.7.2",
     "universal-cookie": "^4.0.4",
     "web-vitals": "^2.1.4"
@@ -54,6 +55,7 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.4",
     "@typescript-eslint/eslint-plugin": "^5.29.0",
     "@typescript-eslint/parser": "^5.29.0",
     "clsx": "^1.1.1",
